TODO: Complete setup of Pact environment

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -7,6 +7,10 @@ description: >
   Pact.
 ---
 
+## TODO: Complete setup of Pact environment
+
+npx ng test --karma-config karma.pact.conf.js
+
 ## Credits
 
 This approach came from:
@@ -37,7 +41,14 @@ What you'll install:
  - Some declaration files (@types/express and @types/needle) needed by the above packages.
 
 ~~~
-npm install -D @pact-foundation/pact-node @pact-foundation/karma-pact @pact-foundation/pact-web @types/express @types/needle
+npm uninstall -D @pact-foundation/pact-node @pact-foundation/karma-pact
+npm uninstall -D @pact-foundation/pact-web @types/express @types/needle
+npm uninstall @pact-foundation/pact-node @pact-foundation/karma-pact
+npm uninstall @pact-foundation/pact-web @types/express @types/needle
+
+
+npm install -D @pact-foundation/pact-node @pact-foundation/karma-pact puppeteer
+npm install @pact-foundation/pact-web @types/express @types/needle
 ~~~
 
 Commit with the comment "npm install -D @pact...".
@@ -137,184 +148,208 @@ Commit with the comment "Renamed spec to backend.pact.spec.ts.".
 src\app\pact\backend.pact.spec.ts
 
 ~~~
-// import { Observable } from 'rxjs';
-// // TODO: Consider committing https://raw.githubusercontent.com/pact-foundation/pact-js/master/examples/karma/jasmine/client-spec.js as an interim commit.
+import { PactWeb } from '@pact-foundation/pact-web';
+import { Observable } from 'rxjs';
+// TODO: Consider committing https://raw.githubusercontent.com/pact-foundation/pact-js/master/examples/karma/jasmine/client-spec.js as an interim commit.
 
-// import { HttpClientTestingModule } from '@angular/common/http/testing';
-// import { fakeAsync, TestBed } from '@angular/core/testing';
-// import { BackendService } from '../core/singleton-services/backend/backend.service';
-// import { PactWeb, Matchers, PactWebOptions } from '@pact-foundation/pact-web';
-// import { InjectionToken } from '@angular/core';
-// import { HttpClient } from '@angular/common/http';
-// import { Movie } from '../core/singleton-services/backend/movie';
+import { HttpClientTestingModule } from '@angular/common/http/testing';
+import { fakeAsync, TestBed } from '@angular/core/testing';
+import { BackendService } from '../core/singleton-services/backend/backend.service';
+import { InjectionToken } from '@angular/core';
+import { HttpClient } from '@angular/common/http';
+import { Movie } from '../core/singleton-services/backend/movie';
 
-// // export const BACKEND_BASE_URL = new InjectionToken<string>('BACKEND_BASE_URL');
+// export const BACKEND_BASE_URL = new InjectionToken<string>('BACKEND_BASE_URL');
 
-// describe('BackendService', () => {
-//   let service: BackendService;
-//   let provider: PactWeb;
+describe('BackendService', () => {
+  let service: BackendService;
+  // let provider: PactWeb;
+  let p2: PactWeb;
 
-//   beforeAll((done) => {
-//     // const packWebConfig: PactWebOptions = {
-//     //   port: 1234,
-//     //   host: '127.0.0.1',
-//     // };
-//     // provider = new PactWeb(packWebConfig);
-//     provider = new PactWeb();
-//     setTimeout(done, 10000);
-//     provider.removeInteractions();
-//     done();
-//   });
+  beforeAll((done) => {
+    // // const packWebConfig: PactWebOptions = {
+    // //   port: 1234,
+    // //   host: '127.0.0.1',
+    // // };
+    // // provider = new PactWeb(packWebConfig);
+    // provider = new PactWeb({
+    //   // consumer: 'bcfinal-theatermanagement-spa',
+    //   // provider: 'bcfinal-theatermanagement-bff',
+    //   host: '127.0.0.1',
+    //   port: 1234,
+    //   spec: 2
+    //  });
+    // // setTimeout(done, 10000);
+    // provider.removeInteractions();
+    // done();
 
-//   beforeEach((done) => {
-//     TestBed.configureTestingModule({
-//       imports: [HttpClientTestingModule],
-//       providers: [
-//         // { provide: 'BACKEND_BASE_URL', useValue: `${provider.mockService.baseUrl}/api`},
-//         { provide: 'BACKEND_BASE_URL', useValue: 'http://127.0.0.1:1234/api' },
-//         BackendService
-//       ]
-//     });
-//     service = TestBed.inject(BackendService);
-//     done();
-//   });
+     // const packWebConfig: PactWebOptions = {
+    //   port: 1234,
+    //   host: '127.0.0.1',
+    // };
+    // provider = new PactWeb(packWebConfig);
+    p2 = new PactWeb({
+      // consumer: 'bcfinal-theatermanagement-spa',
+      // provider: 'bcfinal-theatermanagement-bff',
+      host: '127.0.0.1',
+      port: 1234,
+      spec: 2
+     });
+    // setTimeout(done, 10000);
+    p2.removeInteractions();
+    done();
+ });
 
-//   afterAll((done) => {
-//     provider.finalize().then(done, done.fail)
-//     // done();
-//   });
+  beforeEach((done) => {
+    TestBed.configureTestingModule({
+      imports: [HttpClientTestingModule],
+      providers: [
+        // { provide: 'BACKEND_BASE_URL', useValue: `${provider.mockService.baseUrl}/api`},
+        { provide: 'BACKEND_BASE_URL', useValue: 'http://127.0.0.1:1234/api' },
+        BackendService
+      ]
+    });
+    service = TestBed.inject(BackendService);
+    done();
+  });
 
-//   it('should be created (by backend.pact.spec))', (done) => {
-//     expect(service).toBeTruthy();
-//     done();
-//   });
+  afterAll((done) => {
+    // provider.finalize().then(done, done.fail)
+    p2.finalize().then(done, done.fail)
+    // done();
+  });
 
-//   it('should have correct baseUrl', (done) => {
-//     expect(service.baseUrl).toBe('http://127.0.0.1:1234/api');
-//     done();
-//   });
+  it('should be created (by backend.pact.spec))', (done) => {
+    expect(service).toBeTruthy();
+    done();
+  });
 
-//   // describe("getMovies", function () {
-//   //   beforeAll((done) => {
-//   //     const emptyMovies: any[] = [];
-//   //     provider
-//   //       .addInteraction(
-//   //         {
-//   //           state: "I am friends with Fred",
-//   //           uponReceiving: "a request friends",
-//   //           withRequest: {
-//   //             method: "GET",
-//   //             path: "/api/movies",
-//   //             headers: {
-//   //               Accept: "application/json",
-//   //             },
-//   //           },
-//   //           willRespondWith: {
-//   //             status: 200,
-//   //             headers: {
-//   //               "Content-Type": "application/json",
-//   //             },
-//   //             body: {
-//   //               emptyMovies
-//   //             },
-//   //           },
-//   //         }
-//   //       )
-//   //       .then(done, done.fail)
-//   //       // provider.mockService.writePact().then(done);
-//   //   });
+  it('should have correct baseUrl', (done) => {
+    expect(service.baseUrl).toBe('http://127.0.0.1:1234/api');
+    done();
+  });
 
-//   //   // it("always succeeds", (done) => {
-//   //   //   done();
-//   //   // });
+  // describe("getMovies", function () {
+  //   beforeAll((done) => {
+  //     const emptyMovies: any[] = [];
+  //     provider
+  //       .addInteraction(
+  //         {
+  //           state: "I am friends with Fred",
+  //           uponReceiving: "a request friends",
+  //           withRequest: {
+  //             method: "GET",
+  //             path: "/api/movies",
+  //             headers: {
+  //               Accept: "application/json",
+  //             },
+  //           },
+  //           willRespondWith: {
+  //             status: 200,
+  //             headers: {
+  //               "Content-Type": "application/json",
+  //             },
+  //             body: {
+  //               emptyMovies
+  //             },
+  //           },
+  //         }
+  //       )
+  //       .then(done, done.fail)
+  //       // provider.mockService.writePact().then(done);
+  //   });
 
-//   //   it("has no movies", (done) => {
-//   //     //Run the tests
-//   //     console.log(`********${provider.mockService.baseUrl}******************************`);
-//   //     // service.getMovies().subscribe(
-//   //     //   movies => {
-//   //     //     expect(movies).toEqual(
-//   //     //       [
-//   //     //       ]
-//   //     //     );
-//   //     //     console.log('success!');
-//   //     //     done();
-//   //     //   },
-//   //     //   error => done.fail(error)
-//   //     // );
-//   //     done();
-//   //     //provider.verify().then(done, done.fail)
-//   //   });
+  //   // it("always succeeds", (done) => {
+  //   //   done();
+  //   // });
 
-//   //   // it("has no movies", fakeAsync(() => {
-//   //   //   // given
-//   //   //   var movies: Movie[] = [];
+  //   it("has no movies", (done) => {
+  //     //Run the tests
+  //     console.log(`********${provider.mockService.baseUrl}******************************`);
+  //     // service.getMovies().subscribe(
+  //     //   movies => {
+  //     //     expect(movies).toEqual(
+  //     //       [
+  //     //       ]
+  //     //     );
+  //     //     console.log('success!');
+  //     //     done();
+  //     //   },
+  //     //   error => done.fail(error)
+  //     // );
+  //     done();
+  //     //provider.verify().then(done, done.fail)
+  //   });
 
-//   //   //   // when
-//   //   //   // service.getMovies().subscribe(
-//   //   //   //   result => {
-//   //   //   //     movies = result;
-//   //   //   //   });
+  //   // it("has no movies", fakeAsync(() => {
+  //   //   // given
+  //   //   var movies: Movie[] = [];
 
-//   //   //   service.getMovies().subscribe(
-//   //   //     result => {
-//   //   //       movies = result;
-//   //   //     });
-//   //   //   // then
-//   //   //   expect(movies).toEqual(
-//   //   //     [
-//   //   //     ]
-//   //   //   );
+  //   //   // when
+  //   //   // service.getMovies().subscribe(
+  //   //   //   result => {
+  //   //   //     movies = result;
+  //   //   //   });
 
-//   //   //   // done();
-//   //   //   provider.verify();
-//   //   //   //provider.verify().then(done, done.fail)
-//   //   // }));
-//   // });
+  //   //   service.getMovies().subscribe(
+  //   //     result => {
+  //   //       movies = result;
+  //   //     });
+  //   //   // then
+  //   //   expect(movies).toEqual(
+  //   //     [
+  //   //     ]
+  //   //   );
 
-//   describe("sayHello", () => {
-//     beforeAll(function (done) {
-//       provider.addInteraction({
-//         state: 'Yo!',
-//         uponReceiving: 'a request for say hello',
-//         withRequest: {
-//           method: 'GET',
-//           path: '/hello-service/api',
-//           query: 'name=Chris'
-//         },
-//         willRespondWith: {
-//           status: 200,
-//           headers: { "Content-Type": "application/json" },
-//           body: 'Hello Chris!'
-//         }
-//       })
-//       .then(function () { done() }, function (err) { done.fail(err) })
-//     })
+  //   //   // done();
+  //   //   provider.verify();
+  //   //   //provider.verify().then(done, done.fail)
+  //   // }));
+  // });
 
-//     it("should say hello", function(done) {
-//       //Run the tests
-//       service.sayHello('Chris')
-//         .subscribe(res => {
-//           expect(res).toEqual('Hello Chris!')
-//           done()
-//         },
-//         err => {
+  // describe("sayHello", () => {
+  //   beforeAll(function (done) {
+  //     provider.addInteraction({
+  //       state: 'Yo!',
+  //       uponReceiving: 'a request for say hello',
+  //       withRequest: {
+  //         method: 'GET',
+  //         path: '/hello-service/api',
+  //         query: 'name=Chris'
+  //       },
+  //       willRespondWith: {
+  //         status: 200,
+  //         headers: { "Content-Type": "application/json" },
+  //         body: 'Hello Chris!'
+  //       }
+  //     })
+  //     .then(function () { done() }, function (err) { done.fail(err) })
+  //   })
 
-//         done.fail(err)
-//       })
-//     });
+  //   // it("should say hello", function(done) {
+  //   //   //Run the tests
+  //   //   service.sayHello('Chris')
+  //   //     .subscribe(res => {
+  //   //       expect(res).toEqual('Hello Chris!')
+  //   //       done()
+  //   //     },
+  //   //     err => {
 
-//     // verify with Pact, and reset expectations
-//     it('successfully verifies', function(done) {
-//       provider.verify()
-//         .then(function(a) {
-//           done()
-//         }, function(e) {
-//           done.fail(e)
-//         })
-//     })
-//   })
-// });
+  //   //     done.fail(err)
+  //   //   })
+  //   // });
+
+  //   // // verify with Pact, and reset expectations
+  //   // it('successfully verifies', function(done) {
+  //   //   provider.verify()
+  //   //     .then(function(a) {
+  //   //       done()
+  //   //     }, function(e) {
+  //   //       done.fail(e)
+  //   //     })
+  //   // })
+  // })
+});
 ~~~
 
 ~~~
