ConfigService and changes to About

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
@@ -2,7 +2,7 @@
 type: docs
 title: "Obtain the backend URL"
 linkTitle: "Obtain the backend URL"
-weight: 30
+weight: 25
 description: >
   Who you gonna call?
 ---
@@ -12,16 +12,24 @@ This stuff came from https://www.thisdot.co/blog/runtime-environment-configurati
 ### Overview
 
 We're going to create a service, `ConfigService`, which:
- - Uses an `HttpClient`.
- - Reads, at runtime, values from a file `config.json`.
-
-`config.json` will start with some default values but will be overwritten by the
-pipeline to contain the appropriate values for the environment in which
-the site is running.
+- Uses an `HttpClient`.
+- Reads, at runtime, values from a file `config.json`.
+  - The file `assets/config.json` will be kept under source control and contains default values.
+  - The pipeline will entirely replace the default `config.json` file when the app is staged or deployed.
+- Has `apiUrl` as one of those values.
+  - The value in the default `assets/config.json` will be `"/api"`
 
 ### Create feature branch
 
 feature/obtain-backend-url
+
+### Install Spectator
+
+~~~
+npm install @ngneat/spectator --save-dev
+~~~
+
+Commit with comment "npm install @ngneat/spectator --save-dev"
 
 ### assets/config.json
 
@@ -58,16 +66,36 @@ Commit with comment "ng g class & service config config"
 Edit `config.ts`:
 ~~~
 export class Config {
-  apiUrl: string | undefined;
+  apiBaseUrl: string | undefined;
 }
 ~~~
 
-Edit `config.service.ts` to add `HttpClient` to the constructor:
+Edit `config.service.ts`:
 
 ~~~
-export class ConfigService {
+import { HttpClient } from "@angular/common/http";
+import { Injectable } from "@angular/core";
 
-  constructor(private httpClient: HttpClient) { }
+import { Config } from "./config";
+
+@Injectable({
+  providedIn: 'root'
+})
+export class ConfigService {
+  apiBaseUrl: string;
+
+  constructor(private httpClient: HttpClient) {
+    this.apiBaseUrl = '(not yet loaded)';
+  }
+
+  loadConfig() {
+    return this.httpClient
+      .get<Config>('./assets/config.json')
+      .toPromise()
+      .then(config => {
+        this.apiBaseUrl = config.apiBaseUrl!;
+      });
+  }
 }
 ~~~
 
@@ -86,48 +114,33 @@ Add an `HttpClientTestingModule` to the `imports` in `config.service.spec.ts` li
 
 Now your tests should be happy again.
 
-Create a stub for our implementation code and provide a test for it.
-The test will initially fail, of course, and that's good.
-
-In `config.service.ts`:
-
-~~~
-export class ConfigService {
-  public config!: Config;
-
-  constructor(private httpClient: HttpClient) { }
-
-  loadConfig(): Config {
-    return this.config; // TODO: Read from file
-  }
-}
-~~~
-
-In `config.service.spec.ts`:
+Update `src\app\app.module.ts`:
 
 ~~~
 ...
+import { ConfigService } from './core/singleton-services/config/config.service';
+import { APP_INITIALIZER } from '@angular/core';
 
-  it('should provide default values', () => {
-    const config = service.loadConfig();
-    expect(config.apiUrl).toBe('/api');
-  });
-});
+export const configFactory = (configService: ConfigService) => {
+  return () => configService.loadConfig();
+};
+...
+providers: [
+    {
+      // Loading ConfigService as part of APPINITIALIZER
+      // ensures the application isn't started before the
+      // config file is loaded.
+      provide: APP_INITIALIZER,
+      useFactory: configFactory,
+      deps: [ConfigService],
+      multi: true
+    },
+...
 ~~~
 
-At this point you should have a failing test like this:
+Commit with comment "ConfigService"
 
-~~~
-ConfigService > should provide default values
+### TODO: Finish this up.
 
-Expected undefined to be '/api'.
-~~~
+Need to add a unit test.
 
-That's good!
-
-Commit with comment "Wrote stub for ConfigService.loadConfig()"
-
-Let's provide the proper implementation in `config.service.ts` so the test passes.
-
-~~~
-~~~
