--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/042. About Page.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/042. About Page.md
@@ -28,7 +28,7 @@ TODO: List the others
 
 Commit with comment "ng g c about"
 
-Add the routing stuff to ``:
+Add the routing stuff to `src\app\app-routing.module.ts`:
 
 ~~~
 import { NgModule } from '@angular/core';
@@ -58,3 +58,118 @@ Add the link to the header in `src\app\areas\app\header\header.component.html`:
 
 Commit with comment "Routing for About area"
 
+Update `src\app\areas\about\pages\about\about.component.html`:
+~~~
+<table class="table table-striped table-bordered table-sm ">
+  <thead>
+    <tr>
+      <th scope="col">Property</th>
+      <th scope="col">Value</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>environment.production</td>
+      <td>{{this.production}}</td>
+    </tr>
+    <tr>
+      <td>environment.apiBaseUrl</td>
+      <td>{{this.apiBaseUrl}}</td>
+    </tr>
+  </tbody>
+
+</table>
+~~~
+
+Update `src\app\areas\about\pages\about\about.component.ts`:
+~~~
+import { ConfigService } from './../../../../core/singleton-services/config/config.service';
+import { Component, OnInit } from '@angular/core';
+import { environment } from 'src/environments/environment';
+
+@Component({
+  selector: 'app-about',
+  templateUrl: './about.component.html',
+  styleUrls: ['./about.component.scss']
+})
+export class AboutComponent implements OnInit {
+  public apiBaseUrl!: string;
+  public production: string = `${environment.production}`;
+
+  constructor(private configService: ConfigService) { }
+
+  ngOnInit(): void {
+    this.apiBaseUrl = this.configService.apiBaseUrl;
+  }
+}
+~~~
+
+Update `src\app\areas\about\pages\about\about.component.spec.ts`:
+~~~
+import { HttpClientTestingModule } from '@angular/common/http/testing';
+import { ComponentFixture, TestBed } from '@angular/core/testing';
+import { mockProvider } from '@ngneat/spectator';
+
+import { ConfigService } from './../../../../core/singleton-services/config/config.service';
+
+import { AboutComponent } from './about.component';
+
+describe('AboutComponent', () => {
+  let component: AboutComponent;
+  let fixture: ComponentFixture<AboutComponent>;
+
+  beforeEach(async () => {
+    await TestBed.configureTestingModule({
+      imports: [HttpClientTestingModule],
+      providers: [
+        mockProvider(ConfigService, {
+          apiBaseUrl: '/example-api-base-url'
+        })
+      ],
+      declarations: [AboutComponent]
+    })
+      .compileComponents();
+
+  });
+
+  beforeEach(() => {
+    fixture = TestBed.createComponent(AboutComponent);
+    component = fixture.componentInstance;
+    fixture.detectChanges();
+  });
+
+  it('should create', () => {
+    expect(component).toBeTruthy();
+  });
+
+  it('should have appropriate default values', () => {
+    expect(component.apiBaseUrl).toBe('/example-api-base-url');
+    expect(component.production).toBe('false');
+  });
+});
+~~~
+
+Updated `src\app\areas\about\pages\about\about.component.ts`:
+~~~
+import { ConfigService } from './../../../../core/singleton-services/config/config.service';
+import { Component, OnInit } from '@angular/core';
+import { environment } from 'src/environments/environment';
+
+@Component({
+  selector: 'app-about',
+  templateUrl: './about.component.html',
+  styleUrls: ['./about.component.scss']
+})
+export class AboutComponent implements OnInit {
+  public apiBaseUrl!: string;
+  public production: string = `${environment.production}`;
+
+  constructor(private configService: ConfigService) { }
+
+  ngOnInit(): void {
+    this.apiBaseUrl = this.configService.apiBaseUrl;
+  }
+}
+~~~
+
+Commit with comment "About page"
