--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
@@ -16,7 +16,7 @@ We're going to create a service, `ConfigService`, which:
 - Reads, at runtime, values from a file `config.json`.
   - The file `assets/config.json` will be kept under source control and contains default values.
   - The pipeline will entirely replace the default `config.json` file when the app is staged or deployed.
-- Has `apiUrl` as one of those values.
+- Has `apiBaseUrl` as one of those values.
   - The value in the default `assets/config.json` will be `"/api"`
 
 ### Create feature branch
@@ -24,6 +24,8 @@ We're going to create a service, `ConfigService`, which:
 feature/obtain-backend-url
 
 ### Install Spectator
+
+TODO: Explain why we like Spectator https://github.com/ngneat/spectator
 
 ~~~
 npm install @ngneat/spectator --save-dev
@@ -37,7 +39,7 @@ Create `assets/config.json`. (The assets folder contains static assets which wil
 into our final static site.)
 ~~~
 {
-  "apiUrl": "/api"
+  "apiBaseUrl": "/api"
 }
 ~~~
 
