Improved the apiBaseUrl logic.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/025. Obtain the backend URL.md
@@ -13,11 +13,15 @@ This stuff came from https://www.thisdot.co/blog/runtime-environment-configurati
 
 We're going to create a service, `ConfigService`, which:
 - Uses an `HttpClient`.
-- Reads, at runtime, values from a file `config.json`.
-  - The file `assets/config.json` will be kept under source control and contains default values.
-  - The pipeline will entirely replace the default `config.json` file when the app is staged or deployed.
-- Has `apiBaseUrl` as one of those values.
-  - The value in the default `assets/config.json` will be `"/api"`
+- Reads, at runtime, configuration values in this order:
+    1. From the Angular environment file.
+    2. (If present, overriding the above:) From the config.json file.
+
+The file `assets/config.json` will be kept under source control 
+and will initially contain no properties, which means that
+when debugging all properties will be read from `src\environments\environment.ts`.
+
+The pipeline will entirely replace the default `config.json` file when the app is staged or deployed.
 
 ### Create feature branch
 
@@ -35,11 +39,9 @@ Commit with comment "npm install @ngneat/spectator --save-dev"
 
 ### assets/config.json
 
-Create `assets/config.json`. (The assets folder contains static assets which will be copied 
-into our final static site.)
+Create `assets/config.json`.
 ~~~
 {
-  "apiBaseUrl": "/api"
 }
 ~~~
 
@@ -75,19 +77,39 @@ export class Config {
 Edit `config.service.ts`:
 
 ~~~
+/*
+  Accessor for configuration properties.
+
+  Loads properties in this order:
+    1. From the Angular environment file ().
+    2. (If present, overriding the above:) From the config.json file.
+
+  The AppModule (see src\app\app.module.ts) loads this service as part
+  of APPINITIALIZER, ensuring the application isn't started before the
+  config settings are loaded.
+
+ */
+
 import { HttpClient } from "@angular/common/http";
 import { Injectable } from "@angular/core";
 
+import { environment } from './../../../../environments/environment';
 import { Config } from "./config";
 
 @Injectable({
   providedIn: 'root'
 })
 export class ConfigService {
+  envName: string;
   apiBaseUrl: string;
+  production: boolean;
 
   constructor(private httpClient: HttpClient) {
-    this.apiBaseUrl = '(not yet loaded)';
+    // 1. From the Angular environment file.
+    const environmentAny: any = environment;
+    this.envName = environmentAny.envName;
+    this.production = environmentAny.production;
+    this.apiBaseUrl = environmentAny.apiBaseUrl;
   }
 
   loadConfig() {
@@ -95,7 +117,18 @@ export class ConfigService {
       .get<Config>('./assets/config.json')
       .toPromise()
       .then(config => {
-        this.apiBaseUrl = config.apiBaseUrl!;
+        // 2. (If present, overriding the above:) From the config.json file.
+        const configAny: any = config;
+
+        if (configAny.envName != undefined) {
+          this.production = configAny.production;
+        }
+        if (configAny.envName != undefined) {
+          this.envName = `${configAny.envName}`;
+        }
+        if (config.apiBaseUrl != undefined) {
+          this.apiBaseUrl = `${config.apiBaseUrl}`;
+        }
       });
   }
 }
@@ -131,7 +164,7 @@ providers: [
     {
       // Loading ConfigService as part of APPINITIALIZER
       // ensures the application isn't started before the
-      // config file is loaded.
+      // config settings are loaded.
       provide: APP_INITIALIZER,
       useFactory: configFactory,
       deps: [ConfigService],
